# rust-giga-test-webapp

./: .env.sample  Cargo.toml  README.md
resources/: gigatest.toml  style.css
src/: env.rs  errors.rs  giga_test.rs  main.rs  models.rs  pages.rs  routes.rs
templates/: about.html  base.html  error.html  index.html  part.html
testing/: config.yaml  locustfile.py
