[package]
name = "rust-giga-test-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", default-features = false, features = ["with-axum"] }
askama_axum = { version = "0.4" }
axum = { version = "0.7" }
axum-extra = { version = "0", features = ["typed-header"] }
bytes = "1"
mime = "0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = { version = "0" }
tower = { version = "0", default-features = false }
tower-http = { version = "0", features = ["compression-full", "limit", "normalize-path", "timeout", "trace"] }
tower-sessions = { version = "0" }
tracing = "0"
tracing-subscriber = "0"
tower-serve-static = "0"
include_dir = "0"
regex = "1.11.1"
