[package]
name = "rust-giga-test-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14"
axum = { version = "0.8" }
axum-extra = { version = "0", features = ["typed-header"] }
bytes = "1"
mime = "0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = { version = "0" }
tower = { version = "0", default-features = false }
tower-http = { version = "0", features = ["compression-full", "limit", "normalize-path", "timeout", "trace"] }
tower-sessions = { version = "0" }
tracing = "0"
tracing-subscriber = "0"
tower-serve-static = { version = "0", features = ["metadata"] }
include_dir = "0"
regex = "1"
dotenvy = "0"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
displaydoc = "0.2"
